--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "bits_and_bobs"
-version = "0.2.0"
+version = "0.2.0.dev"
 description = "General utility functions with no dependencies."
 readme = "README.md"
 authors = [
